# ymm-automation

./: .editorconfig  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-backend.yml  build-frontend.yml
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  apps.py  contract_parser.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_report_counter_global.py  0003_file_customer.py  0004_delivery_and_period_fields.py  0005_contracts_and_customer_fields.py  0006_app_settings.py  0007_status_fields.py  0008_customer_identity_fields.py  0009_normalize_unique_together.py  0010_state_sync_contract_report.py  0011_contract_links_and_status.py  0012_yearlock.py  0013_card_notes.py  0014_file_note_scope_and_contract.py  0015_note_mail_contacts.py  0016_appsetting_smtp_fields.py  0017_note_model.py  0018_note_subject_and_file_note_link.py  0019_appsetting_mail_brand_name.py  0020_note_mail_sent_to.py  0021_chat_models.py  0022_chat_global_thread.py
frontend/: .env.example  Dockerfile  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/contracts/: page.tsx
frontend/src/app/customers/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/: app-shell.tsx  back-button.tsx  chat-drawer.tsx  sidebar.tsx  table.tsx
frontend/src/lib/: api.ts  auth.ts  format.ts
frontend/src/styles/: globals.css
(+12 files in other folders)
